typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserForStatement4.ts.stderr
error: TS2406
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement4.ts:1:6
  |
1 | for (a = 1 in b) {
  |      ^^^^^

error: UndefinedSymbol {
    sym: Atom('a' type=inline),
    span: Span {
        lo: BytePos(
            5,
        ),
        hi: BytePos(
            6,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement4.ts:1:6
  |
1 | for (a = 1 in b) {
  |      ^

error: UndefinedSymbol {
    sym: Atom('b' type=inline),
    span: Span {
        lo: BytePos(
            14,
        ),
        hi: BytePos(
            15,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement4.ts:1:15
  |
1 | for (a = 1 in b) {
  |               ^

